@@ -13,7 +13,7 @@ Use UTF\\-8 codepage for output.
 / looks for a config file/ {
 a\
 on Windows at\
-%APPDATA%\\\\RHash\\\\rhashrc, %HOMEDRIVE%%HOMEPATH%\\\\rhashrc\
+%APPDATA%\\\\RHash\\\\rhashrc, %HOMEDRIVE%%HOMEPATH%\\\\rhashrc, {PROGRAM_DIRECTORY}\\\\rhashrc\
 \
 and on Linux/Unix
 }
