@@ -1,5 +1,6 @@
 Mon Aug 14 2017 Aleksey
-	* look for locales directory in the program directory on Windows
+	* look for locales directory at PROGRAM_DIRECTORY\locale on Windows
+	* look for config at PROGRAM_DIRECTORY\rhashrc on Windows
 
 Fri Aug  4 2017 Aleksey
 	* support LibRhash bindings to PHP7
